@@ -48,3 +48,5 @@
 #               Fixed bug with disk firmware code
 #               0.2.5 Fri 19 Jul 2013 14:43:06 EST
 #               Improved disk firmware output
+#               0.2.6 Fri 19 Jul 2013 21:52:08 EST
+#               Futher improved disk firmware code
